@@ -1,3 +1,6 @@
+ - All const std::vector<foo>& now return a readonly NumPy array
+ - Make a robust macro for generating a NumPy array from data
+ - Exposing low level fem functionality to Python, by adding a Cell -> ufc::cell typemap
  - Added ufl_cell as a method to Mesh in Python interface
  - Fix memory leak in Zoltan interface
  - Remove some 'new' for arrays in favour of std::vector
